--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
+MAIL_SECURE=true
 MAIL_USER=florian.raman09@gmail.com
 MAIL_PASSWORD=blgh zord uixq hlbr
 MAIL_DESTINATION=exotitse.contact@gmail.com
